# WhatIEat

./: ARCHITECTURE.md  README.md  app.json  babel.config.js  global.css  package-lock.json  package.json  tsconfig.json
.github/prompts/: whatieait.prompt.md
recipe_recommender/: main.py  package-lock.json  pyproject.toml
recipe_recommender/data/: recipes.json
recipe_recommender/src/models/: recommender.py  translator.py  vectorizer.py
recipe_recommender/src/script/: preprocess.py
recipe_recommender/src/utils/: schemas.py
src/: uniwind.d.ts
src/app/: _layout.tsx  index.tsx
src/app/(tabs)/: _layout.tsx  frigo.tsx  index.tsx  profile.tsx  recipes.tsx  scan.tsx
src/app/_showcase/: _layout.tsx  index.tsx
src/app/onboarding/: index.tsx
src/components/onboarding/: continue-button.tsx  form-field.tsx  onboarding-shell.tsx  select-card.tsx
src/components/recipe/: RecipeCard.tsx
src/components/scan/: CameraCapture.tsx  DetectionOverlay.tsx  ScanResultPanel.tsx  ScanSettingsModal.tsx
src/components/showcase/: theme-selector.tsx  theme-toggle.tsx
src/components/ui/: bottom-sheet-blur-overlay.tsx  dialog-blur-backdrop.tsx  section-title.tsx
src/components/whatieat/: expiring-item-row.tsx  (+3 more)
src/config/: runtime-config.json  runtime.ts
src/constants/: colors.ts  mock-data.ts  onboarding.ts
src/contexts/: app-theme-context.tsx
src/hooks/: useFridge.ts  useScanner.ts
src/services/: api.ts  recipes.ts  vision.ts
src/store/: index.ts  profile-store.ts
src/types/: ingredient.ts  profile.ts
src/utils/: calories.ts
themes/: alpha.css
(+87 files in other folders)
